Refactor: update notification for ingredients  - Notification when ingredient lower percentage enter  - Notification when ingredient nearly expired or expired